# bug_fix

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
scripts/: setup.py
specs/001-agent-orchestration/: data-model-zh.md  data-model.md  plan-zh.md  plan.md  quickstart-zh.md  quickstart.md  research-zh.md  research.md  spec-zh.md  spec.md  tasks-zh.md  tasks.md
specs/001-agent-orchestration/checklists/: requirements-zh.md  requirements.md
specs/001-agent-orchestration/contracts/: api-zh.yaml  api.yaml
specs/002-agent-mcp-integration/: data-model.md  plan.md  quickstart-zh.md  quickstart.md  research.md  spec.md  tasks-zh.md  tasks.md
specs/002-agent-mcp-integration/checklists/: requirements.md
specs/002-agent-mcp-integration/contracts/: api-zh.yaml  api.yaml
src/agents/: __init__.py  base.py  claude.py  cli_agent.py  codex.py  copilot.py  docker.py  docker_agent.py
src/api/: __init__.py  app.py
src/api/models/: __init__.py
src/api/routes/: __init__.py  agent.py  execution.py  health.py  workflow.py
src/cli/: __init__.py  contract.py  main.py
src/cli/commands/: __init__.py  agent.py  config.py  workflow.py
src/core/: __init__.py  config.py  config_schema.py  execution.py  logging.py  observability.py  security.py  workflow.py  workflow_management.py
src/integrations/: __init__.py  function_compute.py  github_actions.py  mcp.py
src/integrations/github_actions/: __init__.py
src/mcp/: __init__.py
src/mcp_integration/: server.py
src/mcp_integration/clients/: external_mcp.py  service_discovery.py
src/mcp_integration/tools/: chat_integration.py  custom_workflows.py  external_services.py
src/utils/: __init__.py  docker.py  git.py  validation.py
src/workflows/: __init__.py
src/workflows/templates/: __init__.py  code_review.py  pr_automation.py  task_development.py
tests/: __init__.py
tests/contract/: __init__.py  test_agent_management.py  test_cli_workflow.py  test_function_compute.py  test_github_actions.py  test_mcp.py  test_workflow_management.py
tests/e2e/: __init__.py  test_full_system.py
tests/integration/: __init__.py  test_agent_connectivity.py  test_api_endpoints.py  test_cli_workflow.py  test_function_compute.py  test_github_actions.py  test_mcp_integration.py
tests/unit/: __init__.py  test_agent_config.py  test_cli_workflow.py  test_config_validation.py  test_execution_api.py  test_mcp_clients.py  test_mcp_server.py  test_mcp_tools.py
